--- a/LsySecurityManagement/templates/base.html
+++ b/LsySecurityManagement/templates/base.html
@@ -1,20 +1,20 @@
-<html>
+<!doctype html>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>LsySecurityManagement</title>
-	<meta name="description" content="보안 관리 페이지">
+    <meta name="description" content="보안 관리 페이지">
 	<meta name="author" content="이승용">
 
+    <title>LsySecurityManagement</title>
+
 	<!-- Bootstrap core CSS-->
-    <link href="../static/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
-    <link href="../static/css/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="../static/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="../static/css/dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../static/dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Morris Charts CSS -->
-    <link href="../static/css/vendor/morrisjs/morris.css" rel="stylesheet">
+    <link href="../static/vendor/morrisjs/morris.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,5 +22,6 @@
     <![endif]-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</html>
+    <script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  {% block body %}{% endblock %}
