--- a/LsySecurityManagement/templates/base.html
+++ b/LsySecurityManagement/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="description" content="보안 관리 페이지">
 	<meta name="author" content="이승용">
 
-    <title>LsySecurityManagement</title>
+    <title>Lsy - SecurityManagement</title>
 
 	<!-- Bootstrap core CSS-->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +15,8 @@
     <link href="../static/dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Morris Charts CSS -->
     <link href="../static/vendor/morrisjs/morris.css" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="../static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -23,5 +25,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="../static/vendor/jquery/jquery.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../static/vendor/metisMenu/metisMenu.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="../static/dist/js/sb-admin-2.js"></script>
 
   {% block body %}{% endblock %}
