--- a/LsySecurityManagement/templates/footer.html
+++ b/LsySecurityManagement/templates/footer.html
@@ -6,3 +6,7 @@
     <script src="../static/vendor/metisMenu/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="../static/dist/js/sb-admin-2.js"></script>
+    <!-- Morris Charts JavaScript -->
+    <script src="../static/vendor/raphael/raphael.min.js"></script>
+    <script src="../static/vendor/morrisjs/morris.min.js"></script>
+    <script src="../static/data/morris-data.js"></script>
